<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MenuFragment">

  <fragment
      android:id="@+id/MenuFragment"
      android:name="com.example.next_gen_example.MenuFragment"
      android:label="@string/menu"
      tools:layout="@layout/fragment_menu">
  </fragment>

  <fragment
      android:id="@+id/AppOpenFragment"
      android:name="com.example.next_gen_example.appopen.AppOpenFragment"
      android:label="@string/app_open"
      tools:layout="@layout/fragment_menu">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_AppOpenFragment"
      app:destination="@id/AppOpenFragment" />

  <fragment
      android:id="@+id/BannerFragment"
      android:name="com.example.next_gen_example.banner.BannerFragment"
      android:label="@string/banner"
      tools:layout="@layout/fragment_menu">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_BannerFragment"
      app:destination="@id/BannerFragment" />
<fragment
      android:id="@+id/CollapsibleBannerFragment"
      android:name="com.example.next_gen_example.banner.CollapsibleBannerFragment"
      android:label="@string/collapsible_banner"
      tools:layout="@layout/fragment_menu">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_CollapsibleBannerFragment"
      app:destination="@id/CollapsibleBannerFragment" />

  <fragment
      android:id="@+id/InlineBannerFragment"
      android:name="com.example.next_gen_example.inlinebanner.InlineBannerFragment"
      android:label="@string/inline_banner"
      tools:layout="@layout/fragment_menu" />
  <action
      android:id="@+id/action_MenuFragment_to_InlineBannerFragment"
      app:destination="@id/InlineBannerFragment" />
  <fragment
      android:id="@+id/CustomNativeFragment"
      android:name="com.example.next_gen_example.native.CustomNativeFragment"
      android:label="@string/custom_native"
      tools:layout="@layout/fragment_menu">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_CustomNativeFragment"
      app:destination="@id/CustomNativeFragment" />

  <fragment
      android:id="@+id/InterstitialFragment"
      android:name="com.example.next_gen_example.interstitial.InterstitialFragment"
      android:label="@string/interstitial"
      tools:layout="@layout/fragment_interstitial">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_InterstitialFragment"
      app:destination="@id/InterstitialFragment" />

  <fragment
      android:id="@+id/NativeFragment"
      android:name="com.example.next_gen_example.native.NativeFragment"
      android:label="@string/native_ad"
      tools:layout="@layout/fragment_native">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_NativeFragment"
      app:destination="@id/NativeFragment" />

  <fragment
      android:id="@+id/FullScreenNativeControllerFragment"
      android:name="com.example.next_gen_example.fullscreennative.FullScreenNativeControllerFragment"
      android:label="@string/full_screen_native"
      tools:layout="@layout/fragment_full_screen_native_controller">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_FullScreenNativeControllerFragment"
      app:destination="@id/FullScreenNativeControllerFragment" />

  <fragment
      android:id="@+id/RewardedFragment"
      android:name="com.example.next_gen_example.rewarded.RewardedFragment"
      android:label="@string/rewarded"
      tools:layout="@layout/fragment_rewarded">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_RewardedFragment"
      app:destination="@id/RewardedFragment" />

  <fragment
      android:id="@+id/RewardedInterstitialFragment"
      android:name="com.example.next_gen_example.rewardedInterstitial.RewardedInterstitialFragment"
      android:label="@string/rewarded_interstitial"
      tools:layout="@layout/fragment_rewarded_interstitial">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_RewardedInterstitialFragment"
      app:destination="@id/RewardedInterstitialFragment" />

  <fragment
      android:id="@+id/IconAdFragment"
      android:name="com.example.next_gen_example.icon.IconAdFragment"
      android:label="@string/icon_ad"
      tools:layout="@layout/fragment_icon_ad">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_IconAdFragment"
      app:destination="@id/IconAdFragment" />

  <fragment
      android:id="@+id/InAppBrowserFragment"
      android:name="com.example.next_gen_example.webview.InAppBrowserFragment"
      android:label="@string/webview_api_for_ads"
      tools:layout="@layout/fragment_browser" />
  <action
      android:id="@+id/action_MenuFragment_to_InAppBrowserFragment"
      app:destination="@id/InAppBrowserFragment" />

  <fragment
      android:id="@+id/ComposeBannerFragment"
      android:name="com.example.next_gen_example.banner.ComposeBannerFragment"
      android:label="@string/compose_banner"
      tools:layout="@layout/fragment_browser" />
  <action
      android:id="@+id/action_MenuFragment_to_ComposeBannerFragment"
      app:destination="@id/ComposeBannerFragment" />

  <fragment
      android:id="@+id/ComposeLazyBannerFragment"
      android:name="com.example.next_gen_example.banner.ComposeLazyBannerFragment"
      android:label="@string/compose_lazy_banner"
      tools:layout="@layout/fragment_browser" />
  <action
      android:id="@+id/action_MenuFragment_to_LazyComposeBannerFragment"
      app:destination="@id/ComposeLazyBannerFragment" />

  <fragment
      android:id="@+id/AdManagerCustomTargetingFragment"
      android:name="com.example.next_gen_example.banner.AdManagerCustomTargetingFragment"
      android:label="@string/ad_manager_custom_targeting"
      tools:layout="@layout/fragment_browser" />
  <action
      android:id="@+id/action_MenuFragment_to_AdManagerCustomTargetingFragment"
      app:destination="@id/AdManagerCustomTargetingFragment" />

  <fragment
      android:id="@+id/preloadingFragment"
      android:name="com.example.next_gen_example.preloading.PreloadMainFragment"
      android:label="@string/preloading"
      tools:layout="@layout/fragment_menu" />
  <action
      android:id="@+id/action_MenuFragment_to_PreloadingFragment"
      app:destination="@id/preloadingFragment" />

  <fragment
      android:id="@+id/AdManagerMultipleAdSizesFragment"
      android:name="com.example.next_gen_example.banner.AdManagerMultipleAdSizesFragment"
      android:label="@string/ad_manager_multiple_ad_sizes"
      tools:layout="@layout/fragment_menu">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_AdManagerMultipleAdSizesFragment"
      app:destination="@id/AdManagerMultipleAdSizesFragment" />

  <fragment
      android:id="@+id/AdManagerCategoryExclusionFragment"
      android:name="com.example.next_gen_example.banner.AdManagerCategoryExclusionFragment"
      android:label="@string/ad_manager_category_exclusion"
    tools:layout="@layout/fragment_menu">
      </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_AdManagerCategoryExclusionFragment"
      app:destination="@id/AdManagerCategoryExclusionFragment" />

  <fragment
      android:id="@+id/AdManagerFluidSizeFragment"
      android:name="com.example.next_gen_example.native.AdManagerFluidSizeFragment"
      android:label="@string/ad_manager_fluid_size"
      tools:layout="@layout/fragment_fluid_size">
      </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_AdManagerFluidSizeFragment"
      app:destination="@id/AdManagerFluidSizeFragment" />

  <fragment
      android:id="@+id/InterstitialSingleLoadFragment"
      android:name="com.example.next_gen_example.interstitial.InterstitialSingleLoadFragment"
      android:label="@string/interstitial_single_load"
      tools:layout="@layout/fragment_interstitial">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_InterstitialSingleLoadFragment"
      app:destination="@id/InterstitialSingleLoadFragment" />

  <fragment
      android:id="@+id/RewardedInterstitialSingleLoadFragment"
      android:name="com.example.next_gen_example.rewardedinterstitial.RewardedInterstitialSingleLoadFragment"
      android:label="@string/rewarded_interstitial_single_load"
      tools:layout="@layout/fragment_rewarded_interstitial">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_RewardedInterstitialSingleLoadFragment"
      app:destination="@id/RewardedInterstitialSingleLoadFragment" />

  <fragment
      android:id="@+id/RewardedSingleLoadFragment"
      android:name="com.example.next_gen_example.rewarded.RewardedSingleLoadFragment"
      android:label="@string/rewarded_single_load"
      tools:layout="@layout/fragment_rewarded">
  </fragment>
  <action
      android:id="@+id/action_MenuFragment_to_RewardedSingleLoadFragment"
      app:destination="@id/RewardedSingleLoadFragment" />


</navigation>
