<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fluid_width_change_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:text="@string/fluid_btn_text" />

            <TextView
                android:id="@+id/fluid_current_width_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:gravity="end"
                android:text="@string/fluid_current_width"
                android:textAppearance="@android:style/TextAppearance.Medium" />

        </LinearLayout>

        <TextView
            android:id="@+id/fluid_tv_beforebanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text="@string/fluid_above"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/fluid_tv_afterbanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:text="@string/fluid_below"
            android:textAppearance="@android:style/TextAppearance.Medium" />


    </LinearLayout>
</ScrollView>
