<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/fab_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/exclusions_tv_none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:text="@string/categoryexclusion_noexclusions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:id="@+id/noneexcluded_banner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/exclusions_tv_dogsexcluded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:text="@string/categoryexclusion_dogsexcluded"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:id="@+id/dogsexcluded_banner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/exclusions_tv_catsexcluded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/fab_margin"
        android:text="@string/categoryexclusion_catsexcluded"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <FrameLayout
        android:id="@+id/catsexcluded_banner_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>
